style.css
@media (min-width: 600px) {
  #box {
    width: 50vw;
    overflow: hidden;
  }
}

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
#wrapper {
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
body {
  margin: 0;
  height: 120vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  padding: 1em;
}
.slider--container {
  position: relative;
  /* width: 95vw; */
  height: 95vh;
  display: flex;
  justify-content: center;
  overflow: hidden;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.img--div {
  position: relative;
  width: 100%;
  height: 100%;
  border: 2px solid white;
  display: flex;
  justify-content: center;
  position: absolute;
  overflow: hidden;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.slider--container .slider-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  /* height: 100%; */
  background-size: 900px 100%;
}
#before-img {
  background-image: url("MangereWestBefore.jpg");
}
#after-img {
  background-image: url("MangereWestNow.jpg");
  /* width: 50%; */
  width: 100%;
  position: relative;
  clip-path: polygon(0px 0px, 50% 0px, 50% 100%, 0px 100%);
}
.slider--container .slider {
  position: absolute;
  -webkit-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  background: rgba(242, 242, 242, 0.3);
  outline: none;
  margin: 0;
  transition: all 0.2s;
  display: flex;
  justify-content: center;
  align-items: center;
}
.slider--container .slider--range:hover {
  background: rgba(242, 242, 242, 0.1);
}
.slider--container .slider--range::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 6px;
  height: 600px;
  background: white;
  cursor: pointer;
}
.slider--container .slider--range::-moz-range-thumb {
  width: 6px;
  height: 600px;
  background: white;
  cursor: pointer;
}
.slider--container .slider--button {
  position: absolute;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0);
  left: calc(50% - 18px);
  top: calc(50% - 18px);
  display: flex;
  justify-content: center;
  align-items: center;
}
.slider--container .slider-button:after {
  content: "";
  padding: 3px;
  display: inline-block;
  border: solid #f8f8f8;
  border-width: 0 2px 2px 0;
  transform: rotate(-45deg);
  margin-left: 2em;
}
.slider--container .slider--button:before {
  content: "";
  padding: 3px;
  display: inline-block;
  border: solid #ffffff;
  border-width: 0 2px 2px 0;
  transform: rotate(135deg);
}
.slider--range {
  width: 100%;
  display: none;
}
#slider-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  z-index: 1000;
}

#slider-crop {
  overflow: hidden;
}

#after-img-border {
  background-color: white;
  width: 100%;
  height: 100%;
  /* position: absolute */
  clip-path: polygon(0px 0px, 50% 0px, 50% 100%, 0px 100%);
}

.footer {
  /* position: absolute; */
  z-index: 1;
  width: 100%;
  background-color: rgba(45, 45, 45, 0.578);
  color: white;
}

